--- a/MonopHelper/Pages/Shared/Cards/_CardTypesTable.cshtml
+++ b/MonopHelper/Pages/Shared/Cards/_CardTypesTable.cshtml
@@ -1,31 +1,39 @@
 @model List<MonopolyCL.Models.Cards.CardType>
 
-
-<table class="table table-striped table-hover table-bordered">
-    <thead>
-    <tr>
-        <th>Type Name</th>
-        <th style="width: 85px"></th>
-    </tr>
-    </thead>
-    <tbody>
-    @{
-        foreach (var ct in Model)
-        {
+@{
+    if (Model.Count > 0)
+    {
+        <table class="table table-striped table-hover table-bordered">
+            <thead>
             <tr>
-                <td>@ct.Name</td>
-                <td>
-                    <button class="btn btn-sm btn-link" onclick="EditCardType('@(ct.Id)', true)"
-                            title="Edit Card Type">
-                        <span class="fa-solid fa-pencil"></span>
-                    </button>
-                    <button class="btn btn-sm btn-link" onclick="DeleteCardType('@(ct.Id)', '@(ct.Name)')"
-                            title="Delete Card Type">
-                        <span class="fa-solid fa-x text-danger"></span>
-                    </button>
-                </td>
+                <th>Type Name</th>
+                <th style="width: 85px"></th>
             </tr>
-        }
+            </thead>
+            <tbody>
+            @{
+                foreach (var ct in Model)
+                {
+                    <tr>
+                        <td>@ct.Name</td>
+                        <td>
+                            <button class="btn btn-sm btn-link" onclick="EditCardType('@(ct.Id)', true)"
+                                    title="Edit Card Type">
+                                <span class="fa-solid fa-pencil"></span>
+                            </button>
+                            <button class="btn btn-sm btn-link" onclick="DeleteCardType('@(ct.Id)', '@(ct.Name)')"
+                                    title="Delete Card Type">
+                                <span class="fa-solid fa-x text-danger"></span>
+                            </button>
+                        </td>
+                    </tr>
+                }
+            }
+            </tbody>
+        </table>
     }
-    </tbody>
-</table>
+    else
+    {
+        <p>You have not defined any custom card types yet.</p>
+    }
+}
