--- a/MonopHelper/Pages/Shared/Cards/_CardsTable.cshtml
+++ b/MonopHelper/Pages/Shared/Cards/_CardsTable.cshtml
@@ -1,3 +1,4 @@
+@using MonopolyCL.Models.Cards.Defaults
 @model List<MonopolyCL.Models.Cards.Card>
 
 
@@ -14,7 +15,10 @@
                 <th>Card Type</th>
                 <th>Card Text</th>
                 <th>Cost</th>
-                <th style="width: 85px"></th>
+                @if (Model.First()?.CardDeck.TenantId != DefaultsDictionary.MonopolyTenant)
+                {
+                    <th style="width: 85px"></th>
+                }
             </tr>
             </thead>
             <tbody>
@@ -28,16 +32,19 @@
                         <td>@card.CardType.Name</td>
                         <td>@card.Text</td>
                         <td>@cost</td>
-                        <td>
-                            <button class="btn btn-sm btn-link" onclick="location.assign('/Cards/Edit/@(card.Id)')"
-                                    title="Edit Card">
-                                <span class="fa-solid fa-pencil"></span>
-                            </button>
-                            <button class="btn btn-sm btn-link" onclick="DeleteCard('@(card.Id)')"
-                                    title="Delete Card">
-                                <span class="fa-solid fa-x text-danger"></span>
-                            </button>
-                        </td>
+                        @if (Model.First().CardDeck.TenantId != DefaultsDictionary.MonopolyTenant)
+                        {
+                            <td>
+                                <button class="btn btn-sm btn-link" onclick="location.assign('/Cards/Edit/@(card.Id)')"
+                                        title="Edit Card">
+                                    <span class="fa-solid fa-pencil"></span>
+                                </button>
+                                <button class="btn btn-sm btn-link" onclick="DeleteCard('@(card.Id)')"
+                                        title="Delete Card">
+                                    <span class="fa-solid fa-x text-danger"></span>
+                                </button>
+                            </td>
+                        }
                     </tr>
                 }
             }
