--- a/MonopHelper/Pages/Shared/Cards/_AddCardTypes.cshtml
+++ b/MonopHelper/Pages/Shared/Cards/_AddCardTypes.cshtml
@@ -1,11 +1,19 @@
-@model List<MonopolyCL.Models.Cards.CardType>
+@model (List<MonopolyCL.Models.Cards.CardType> Types, bool Show)
 
-@{
-    foreach (var type in Model)
+@if(Model.Show){
+    foreach (var type in Model.Types)
     {
         <button class="btn btn-warning mt" style="width: 100%; word-break: break-word; word-wrap: break-word" type="button"
                 data-bs-toggle="modal" data-bs-target="#uploadCards" onclick="SetUploadType('@(type.Id)', '@(type.Name)')">
             Upload @type.Name Cards
         </button>
     }
+    
+    <div class="h-line mt-3"></div>
+                                
+    <button class="btn btn-danger text-white mt mb" style="width: 100%; word-break: break-word; word-wrap: break-word"
+            onclick="MoveCards(false)">
+        Move All Cards
+    </button>
 }
+
