--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -10,100 +10,136 @@
         @ViewData["Title"]
     </div>
     <div class="card-body bg-light">
-        <h4>Version: 1.0.0</h4>
-        <div class="list mb">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    Added standard game.
-                </li>
-                <li class="list-group-item">
-                    Add players to games.
-                </li>
-                <li class="list-group-item">
-                    Track player numbers and jail cost.
-                </li>
-                <li class="list-group-item">
-                    Track properties handed in to free parking.
-                </li>
-                <li class="list-group-item">
-                    Track player loans and the amount that is due.
-                </li>
-                <li class="list-group-item">
-                    Can open games that are not deleted.
-                </li>
-                <li class="list-group-item">
-                    Can remove games.
-                </li>
-            </ul>
+        <div class="divider mb-3">
+            <h3>1.2 Builds</h3>
+            <div class="h-line"></div>
+            
+            <h4>Version: 1.2.3</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Major code base redesign. All core functionality has moved into a class library.
+                    </li>
+                    <li class="list-group-item">
+                        Changed how monopoly defaults are loaded into the game (default cards, chance, community chest, etc).
+                    </li>
+                    <li class="list-group-item">
+                        Added the 'Monopoly Deck' which includes all the default cards.
+                        The cards in this deck cannot be modified, but they can be copied into other decks.
+                    </li>
+                    <li class="list-group-item">
+                        Setup for full turned based game.
+                    </li>
+                </ul>
+            </div>
         </div>
+        
 
-        <h4>Version: 1.0.1</h4>
-        <div class="list mb">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    Can track player triples.
-                </li>
-                <li class="list-group-item">
-                    Added version in footer.
-                </li>
-            </ul>
+        <div class="divider mb-3">
+            <h3>1.1 Builds</h3>
+            <div class="h-line"></div>
+            
+            <h4>Version: 1.1.3</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Redesigned ASP.NET login page.
+                    </li>
+                    <li class="list-group-item">
+                        Tenant and User ID fixes.
+                    </li>
+                    <li class="list-group-item">
+                        Cards in a deck can now be moved or copied to a different deck.
+                    </li>
+                </ul>
+            </div>
+
+            <h4>Version: 1.1.2</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Added version history.
+                    </li>
+                    <li class="list-group-item">
+                        Index page is a generic home page with links to areas of the website.
+                    </li>
+                    <li class="list-group-item">
+                        Added cards into the game.
+                    </li>
+                    <li class="list-group-item">
+                        Can manage cards by uploading/adding new cards, modifying existing ones, or removing cards.
+                    </li>
+                    <li class="list-group-item">
+                        Can create, edit, and remove different card types.
+                    </li>
+                    <li class="list-group-item">
+                        Different card decks based on difficulty.
+                    </li>
+                    <li class="list-group-item">
+                        Can select a card deck and play the cards in that deck.
+                    </li>
+                </ul>
+            </div>
+
+            <h4>Version: 1.1.1</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Add users and tenants.
+                    </li>
+                    <li class="list-group-item">
+                        All pages, except ASP.NET identity pages, require authentication.
+                    </li>
+                    <li class="list-group-item">
+                        Games are now based on users.
+                    </li>
+                </ul>
+            </div>
         </div>
+       
 
-        <h4>Version: 1.1.1</h4>
-        <div class="list mb">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    Add users and tenants.
-                </li>
-                <li class="list-group-item">
-                    All pages, except ASP.NET identity pages, require authentication.
-                </li>
-                <li class="list-group-item">
-                    Games are now based on users.
-                </li>
-            </ul>
-        </div>
+        <div class="divider">
+            <h3>1.0 Builds</h3>
+            <div class="h-line"></div>
 
-        <h4>Version: 1.1.2</h4>
-        <div class="list mb">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    Added version history.
-                </li>
-                <li class="list-group-item">
-                    Index page is a generic home page with links to areas of the website.
-                </li>
-                <li class="list-group-item">
-                    Added cards into the game.
-                </li>
-                <li class="list-group-item">
-                    Can manage cards by uploading/adding new cards, modifying existing ones, or removing cards.
-                </li>
-                <li class="list-group-item">
-                    Can create, edit, and remove different card types.
-                </li>
-                <li class="list-group-item">
-                    Different card decks based on difficulty.
-                </li>
-                <li class="list-group-item">
-                    Can select a card deck and play the cards in that deck.
-                </li>
-            </ul>
-        </div>
+            <h4>Version: 1.0.1</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Can track player triples.
+                    </li>
+                    <li class="list-group-item">
+                        Added version in footer.
+                    </li>
+                </ul>
+            </div>
 
-        <h4>Version: 1.1.3</h4>
-        <div class="list mb">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    Redesigned ASP.NET login page.
-                </li>
-                <li class="list-group-item">
-                    Tenant and User ID fixes.
-                </li>
-                <li class="list-group-item">
-                    Cards in a deck can now be moved or copied to a different deck.
-                </li>
-            </ul>
+            <h4>Version: 1.0.0</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Added standard game.
+                    </li>
+                    <li class="list-group-item">
+                        Add players to games.
+                    </li>
+                    <li class="list-group-item">
+                        Track player numbers and jail cost.
+                    </li>
+                    <li class="list-group-item">
+                        Track properties handed in to free parking.
+                    </li>
+                    <li class="list-group-item">
+                        Track player loans and the amount that is due.
+                    </li>
+                    <li class="list-group-item">
+                        Can open games that are not deleted.
+                    </li>
+                    <li class="list-group-item">
+                        Can remove games.
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
