--- a/MonopHelper/wwwroot/css/site.css
+++ b/MonopHelper/wwwroot/css/site.css
@@ -37,7 +37,19 @@ body {
 }
 
 h1{
-  font-size: 32px;
+  font-size: 2rem;
+}
+
+h2{
+  font-size: 1.8rem;
+}
+
+h3{
+  font-size: 1.5rem;
+}
+
+h4{
+  font-size: 1.2rem;
 }
 
 .card{
