--- a/MonopHelper/wwwroot/css/site.css
+++ b/MonopHelper/wwwroot/css/site.css
@@ -13,6 +13,7 @@
   --adv: #79db60;
   --move: #dbf067;
   --keep: #6da9b5;
+  --choice: #eba94d;
   --payply: #9c44a6;
   --sr: #d13d3d;
 }
@@ -149,6 +150,10 @@ h4{
 .bg-keep{
   background: var(--keep);
   color: white;
+}
+.bg-choice{
+  background: var(--choice);
+  color: black;
 }
 
 .bg-payply{
