--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -13,6 +13,18 @@
         <div class="divider mb-3">
             <h3>1.2 Builds</h3>
             <div class="h-line"></div>
+
+            <h4>Version: 1.2.4</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Changed the jail penalty increase to 50% instead of £20.
+                    </li>
+                    <li class="list-group-item">
+                        Can only have a maximum of 3 unpaid loans at one time.
+                    </li>
+                </ul>
+            </div>
             
             <h4>Version: 1.2.3</h4>
             <div class="list mb">
