--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -14,6 +14,15 @@
             <h3>1.2 Builds</h3>
             <div class="h-line"></div>
 
+            <h4>Version: 1.2.5</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Card types now how a colour option.
+                    </li>
+                </ul>
+            </div>
+            
             <h4>Version: 1.2.4</h4>
             <div class="list mb">
                 <ul class="list-group list-group-flush">
