New contexts based on model groups. Reduces DI of GameDbSet<T> services for each model

--- a/MonopHelper/Pages/TurnBased/Shared/_TurnLayout.cshtml
+++ b/MonopHelper/Pages/TurnBased/Shared/_TurnLayout.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header>
-    <div class="px-4 pt-3 pb-3" style="background: #eee; border-bottom: #ccc inset 1px">
+    <div class="px-4 pt-3 pb-3 container-xxl" style="background: #eee; border-bottom: #ccc inset 1px">
         <button style="display: inline; vertical-align: middle" class="btn btn-primary rounded-pill"
                 onclick="location.assign('/TurnBased')">
             Go Back
