--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/MonopHelper.styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/sweetalert2.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/login.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/chosen.css" asp-append-version="true"/>
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.5/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body>
@@ -76,6 +77,7 @@
 <script src="~/js/admin.js" asp-append-version="true"></script>
 <script src="~/js/Cards/Cards.js" asp-append-version="true"></script>
 <script src="~/js/sweetalert2.min.js" asp-append-version="true"></script>
+<script src="~/js/chosen.jquery.js" asp-append-version="true"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://kit.fontawesome.com/29bf1169ee.js" crossorigin="anonymous"></script>
 
