Changed player DM primary key to int

--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/css/sweetalert2.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/login.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/chosen.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/TurnBased.css" asp-append-version="true"/>
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.5/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body>
