--- a/MonopHelper/Pages/TurnBased/Shared/_TurnLayout.cshtml
+++ b/MonopHelper/Pages/TurnBased/Shared/_TurnLayout.cshtml
@@ -15,12 +15,14 @@
 </head>
 <body>
 <header>
-    <div class="px-4 pt-3 pb-3 container-xxl" style="background: #eee; border-bottom: #ccc inset 1px">
-        <button style="display: inline; vertical-align: middle" class="btn btn-primary rounded-pill"
-                onclick="location.assign('/TurnBased')">
-            Go Back
-        </button>
-        <h3 style="display: inline; vertical-align: middle; margin-left: 30px" class="text-center">@ViewData["Title"]</h3>
+    <div class="px-4 pt-3 pb-3" style="background: #eee; border-bottom: #ccc inset 1px">
+        <div class="container-xxl">
+            <button style="display: inline; vertical-align: middle" class="btn btn-primary rounded-pill"
+                    onclick="location.assign('/TurnBased')">
+                Go Back
+            </button>
+            <h3 style="display: inline; vertical-align: middle; margin-left: 30px" class="text-center">@ViewData["Title"]</h3>
+        </div>
     </div>
 </header>
 <div class="container-xxl">
