--- a/MonopHelper/wwwroot/css/TurnBased.css
+++ b/MonopHelper/wwwroot/css/TurnBased.css
@@ -1,23 +1,3 @@
-.player{
-    display: inline-block;
-    margin: 10px 0;
-}
-
-.player-box{
-    width: 70%;
-    padding-right: 5px;
-    height: 100%;
-    background: #eee;
-    border: #aaa 2px ridge;
-    border-radius: 2px;
-}
-
-.input-box{
-    width: 10%;
-    padding-left: 5px;
-    padding-right: 5px;
-    height: 100%;
-    background: white;
-    border: #aaa 2px ridge;
-    border-radius: 2px;
+.input{
+    width: 15%;
 }
